# stealthy-bgp-hijacking

./: LICENSE  README.md  docker-compose-gpu.yml  docker-compose.yml  environment.yml  run.sh
artefact/analytical-study/: data  reproduce.py  risk_analysis.py  run.sh
artefact/empirical-study/: backend_routine.py  reproduce.py  run.sh
artefact/empirical-study/data/: irr_validator.py  rpki_validator.py  whois_lookup.py
artefact/empirical-study/data/caida/: as_org.py  as_rel.py
artefact/empirical-study/data/geolite/: load.py
artefact/empirical-study/data/geolite/GeoLite2-ASN-CSV_20250318/: GeoLite2-ASN-Blocks-IPv4.csv  GeoLite2-ASN-Blocks-IPv6.csv
artefact/empirical-study/data/geolite/GeoLite2-City-CSV_20250318/: GeoLite2-City-Blocks-IPv4.csv  GeoLite2-City-Blocks-IPv6.csv  GeoLite2-City-Locations-de.csv  GeoLite2-City-Locations-en.csv  GeoLite2-City-Locations-es.csv  GeoLite2-City-Locations-fr.csv  GeoLite2-City-Locations-ja.csv  (+3 more)
artefact/empirical-study/data/routeviews/: get_ribs.py
artefact/empirical-study/data/rov_measurement/: fetch.py  process.py
artefact/empirical-study/data/service/: all-incidents.json
artefact/empirical-study/frontend/: package.json
artefact/empirical-study/frontend/src/: config.js  server.js
artefact/matrix-bgpsim/: README.md  pyproject.toml
artefact/matrix-bgpsim/matrix_bgpsim/: __init__.py
artefact/performance-evaluation/: benchmark.py  reproduce.py  run.sh
artefact/performance-evaluation/.cache/: bgpsim.csv  matrix_bgpsim_1.csv  matrix_bgpsim_20.csv  matrix_bgpsim_40.csv  matrix_bgpsim_gpu.csv
(+20 files in other folders)
