[project]
name = "matrix-bgpsim"
version = "0.1.0"
description = "Matrix-based BGP simulation tool"
authors = [{ name="Anonymized", email="anonymized@email.com" }]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["lz4"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
